--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
-    <script src="./script.js" type="text/javascript"></script>
   </head>
   <body>
   <div class='slider'>
      <div class='slide'><img class='imgslide' id='slide1' src='https://www.zastavki.com/pictures/originals/2014/Nature___Seasons___Summer_Summer_poppies_on_green_background_078293_.jpg'></div>
      <div class='slide'><img class='imgslide' id='slide2' src='https://million-wallpapers.ru/wallpapers/1/10/11370823374574270007/priroda-butony-cvety-romashki-lepestki-leto-belye.jpg'></div>
-     <div class='slide'> <img class='imgslide' id='slide3' src='https://avatars.mds.yandex.net/get-pdb/477388/bfc58a8a-f1c2-426e-83f8-53473b8f96d3/s1200?webp=false'></div>
+     <div class='slide'><img class='imgslide' id='slide3' src='https://avatars.mds.yandex.net/get-pdb/477388/bfc58a8a-f1c2-426e-83f8-53473b8f96d3/s1200?webp=false'></div>
     <button id='previous' onclick='minusSlide()'>previous</button>
     <button id='next' onclick='plusSlide()'>next</button>
   </div>
+  <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
